# supernova

./: .gitignore  CMakeLists.txt  README.md  devenv.nix  devenv.yaml  treefmt.toml
doc/: Bericht.md  music.md
doc/idee/: Supernova.excalidraw  supernova.excalidraw
shaders/: colors.glsl  common.glsl  csg.glsl  linear_space.glsl  main.frag  math.glsl  mesh.glsl  procedural.glsl  procedural_raytracing.glsl  raygen.vert  raymarch.frag  raytrace.frag  raytracing.glsl  scene_construction.glsl  sdf.glsl  uniforms.glsl
src/: audio_engine.cpp  audio_engine.h  cinematic.cpp  explosions.cpp  explosions.h  main.cpp  meshes.cpp  meshes.h  multifile_shaders.cpp  multifile_shaders.h  oldman.cpp  oldman.h  particles.cpp  particles.h  snmesh.cpp  snmesh.h  video_export.cpp  video_export.h
